--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,5 +37,6 @@ target_include_directories(${PROJECT_NAME} PRIVATE src)
 target_link_libraries(${PROJECT_NAME}
   PRIVATE ftxui::screen
   PRIVATE ftxui::dom
+  PRIVATE ftxui::component
 
 )
